# cuttingedge

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  export.yaml  pop909_bigger.yaml  small.yaml
data/: README.md
data/my_midi/: input.mid  input1.mid
data/pop909_chords/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+869 more)
data/sample_output/: demo_accomp.mid  demo_chords.json
scripts/: android_wsl_run.sh  export_all.sh  infer_example.sh  infer_tflite_midi.py  prepare_dataset.py  preprocess_pop909_all_in_one.py  test_model.py  train_and_export.sh  train_small.sh
src/accompaniment/: __init__.py  cli.py
src/accompaniment/data/: collate.py  dataset.py  preprocess.py
src/accompaniment/export/: export_coreml.py  export_onnx.py  export_tflite.py  verify_exports.py
src/accompaniment/generation/: accompaniment_rules.py  chord_decode.py  midi_render.py
src/accompaniment/io/: chord_vocab.py  melody_extract.py  midi_io.py  tokenization.py
src/accompaniment/models/: chord_transformer.py  positional_encoding.py
src/android/: README.md  settings.gradle.kts
src/android/app/src/main/cpp/: CMakeLists.txt  pitch_autocorr.cpp  pitch_autocorr.h  streaming_native.cpp
tests/: conftest.py  test_end_to_end.py  test_midi_io.py  test_model_forward.py  test_rule_generator.py  test_tokenization.py
(+35 files in other folders)
