[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accompaniment"
version = "0.1.0"
description = "Symbolic music accompaniment generation MVP — melody-to-chords transformer + deterministic accompaniment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "pretty_midi>=0.2.10",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "onnxscript>=0.6.0",
    "coremltools>=7.0",
]
tflite = [
    "litert-torch>=0.8.0",
]
tflite-legacy = [
    "onnx>=1.14.0",
    "onnx-tf>=1.10.0",
    "tensorflow>=2.14.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
accompaniment = "accompaniment.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
